new pdfengines/compress endpoint
This endpoint allow to compress a pdf.
This can help a lot for chromium pdf export that can have large output.
We were having some issue (https://bugs.chromium.org/p/chromium/issues/detail?id=103602) and found that for one generated PDF with 1.8MB from chromium/gotenberg, it can go down to 255KB by compressing it with ghostscript.

This include a new pdfengines/compress route, a new ghostscript pdfengine that implements it.

No tests yet until this way to go is validated.
